--- a/views/camera.pug
+++ b/views/camera.pug
@@ -4,19 +4,20 @@ html
 		link(rel="stylesheet",href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css")
 		script(src="https://code.jquery.com/jquery-3.2.1.min.js")
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js")
+		script(src="/socket.io/socket.io.js")
 	body
 		nav.blue-grey.darken-4
 			ul.right
 				li
 					a(href="/") Inicio
 				li
-					a(href="gpio.html") G.P.I.O
+					a(href="gpio") G.P.I.O
 				li
 					a(href="#") Camara
 				li
 					a(href="#file") Archivos
 				li
-					a(hreF="setup.html") Configuraciones
+					a(hreF="setup") Configuraciones
 		#file.modal.bottom-sheet
 			.modal-content
 				h4 Subir archivo
