--- a/views/setup.pug
+++ b/views/setup.pug
@@ -4,6 +4,7 @@ html
 		link(rel="stylesheet",href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css")
 		script(src="https://code.jquery.com/jquery-3.2.1.min.js")
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js")
+		script(src="/socket.io/socket.io.js")
 	body.row
 		nav.nav-extended.blue-grey.darken-4
 			.nav-wrapper
@@ -11,9 +12,9 @@ html
 					li
 						a(href="/") Inicio
 					li
-						a(href="gpio.html") G.P.I.O
+						a(href="gpio") G.P.I.O
 					li
-						a(href="camera.html") Camara
+						a(href="camera") Camara
 					li
 						a(href="#file") Archivos
 					li
