--- a/views/gpio.pug
+++ b/views/gpio.pug
@@ -4,6 +4,7 @@ html
 		link(rel="stylesheet",href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css")
 		script(src="https://code.jquery.com/jquery-3.2.1.min.js")
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js")
+		script(src="/socket.io/socket.io.js")
 	body.row
 		nav.blue-grey.darken-4
 			ul.right
@@ -12,11 +13,11 @@ html
 				li
 					a(href="#") G.P.I.O
 				li
-					a(href="camera.html") Camara
+					a(href="camera") Camara
 				li
 					a(href="#file") Archivos
 				li
-					a(hreF="setup.html") Configuraciones
+					a(hreF="setup") Configuraciones
 		#file.modal.bottom-sheet
 			.modal-content
 				h4 Subir archivo
