--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,7 @@ html
 		link(rel="stylesheet",href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css")
 		script(src="https://code.jquery.com/jquery-3.2.1.min.js")
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js")
+		script(src="/socket.io/socket.io.js")
 		style().
 			.padding{
 				padding: 25px;
@@ -14,13 +15,13 @@ html
 				li
 					a(href="#") Inicio
 				li
-					a(href="gpio.html") G.P.I.O
+					a(href="gpio") G.P.I.O
 				li
-					a(href="camera.html") Camara
+					a(href="camera") Camara
 				li
 					a(href="#file") Archivos
 				li
-					a(hreF="setup.html") Configuraciones
+					a(hreF="setup") Configuraciones
 		#file.modal.bottom-sheet
 			.modal-content
 				h4 Subir archivo
@@ -36,7 +37,7 @@ html
 			.card.col.s2.m3.l2.card-light.white-text.red.darken-1
 				.card-content
 					span.card-title Temperatura
-					p.temperature 46.6 C°
+					p.temperature #{temperature}
 			.card.col.s4.m4.l3.xl2.offset-s1.offset-m1.offset-l1.offset-xl1.card-light.white-text.amber
 				.card-content
 					span.card-title Luz externa
@@ -49,13 +50,14 @@ html
 							span.lever
 							| Encendida
 			.card.col.s12.blue-grey
-				video.responsive-video(controls)
-					source(src="/camera", type="video/mp4")
+				img.camera(src="")
 		script(type="text/javascript").
 			$('.modal').modal();
 			function light(o){
 				let val = $(o).prop('checked');
 				
 			}
-
-			$('.temperature').text("46.5 C°");
+			var socket = io('http://192.168.0.16');
+			socket.on('camera', function (data) {
+				$('img.camera').attr('src', data);
+			});
