--- a/views/camera.pug
+++ b/views/camera.pug
@@ -9,18 +9,18 @@ html
 		nav.blue-grey.darken-4
 			ul.right
 				li
-					a(href="/") Inicio
+					a(href="/") Home
 				li
 					a(href="gpio") G.P.I.O
 				li
-					a(href="#") Camara
+					a(href="#") Camera
 				li
-					a(href="#file") Archivos
+					a(href="#file") Files
 				li
-					a(hreF="setup") Configuraciones
+					a(hreF="setup") Setup
 		#file.modal.bottom-sheet
 			.modal-content
-				h4 Subir archivo
+				h4 Upload file
 				.file-field.input-field
 					.btn
 						span File
