--- a/views/setup.pug
+++ b/views/setup.pug
@@ -10,28 +10,28 @@ html
 			.nav-wrapper
 				ul.right
 					li
-						a(href="/") Inicio
+						a(href="/") Home
 					li
 						a(href="gpio") G.P.I.O
 					li
-						a(href="camera") Camara
+						a(href="camera") Camera
 					li
-						a(href="#file") Archivos
+						a(href="#file") Files
 					li
-						a(hreF="#") Configuraciones
+						a(hreF="#") Setup
 			.nav-content
 				ul.tabs.tabs-transparent
 					li.tab
-						a(href="#setup-temperature") Temperatura
+						a(href="#setup-temperature") Temperature
 					li.tab
 						a(href="#setup-gpio") GPIO
 					li.tab
-						a(href="#setup-files") Archivos
+						a(href="#setup-files") Files
 					li.tab
-						a(href="#setup-camera") Camara
+						a(href="#setup-camera") Camera
 		#file.modal.bottom-sheet
 			.modal-content
-				h4 Subir archivo
+				h4 Upload file
 				.file-field.input-field
 					.btn
 						span File
